# spec

./: .gitignore  795e2c178fdb97aa.llvm  CMakeLists.txt  CMakeListsPrev.txt  Feedback.ipynb  README.md  cshc-space  install_dependencies.py  kmp.dump
aho-corasick/: Untitled.ipynb
aho-corasick/PFAC/: Makefile  PFAC_kernel.cu  PFAC_reorder_Table.cpp  common.mk
aho-corasick/benchmarking/: Matching.ipynb  aho-corasick-bench.ipynb
aho-corasick/cpp/: CMakeLists.txt  CorasickCaseBased.cu  CorasickIfBased.cu  CudaCorasickSpec.cpp  CudaNaiveOpt.cpp  CudaSpecManual.cpp  CudaSpecManualNU.cpp  CudaSpecManualNUBW.cpp  ImpalaCorasick.cpp  ImpalaCorasickGlobalVsPfac.cpp  ImpalaCorasickVsPfac.cpp  ImpalaNaive(char-based).cpp  ImpalaNaive.cpp  ImpalaNaiveOpt.cpp  ImpalaNaiveOptimizedVsPfac.cpp  NaiveImpalaVsPfac.cpp  PfacGlobal.cpp  mini-benchmark.cpp  simple_example.cpp  spec_match.cpp  spec_match.hpp  test.cpp
aho-corasick/cpp/spec-kernels/: BenchKernels.hpp  BenchmarkKernels.cu  CudaCorasickSpec.cu  CudaNaiveOpt.cu  CudaSpecManualOpt.cu  CudaSpecManualOptNU.cu  CudaSpecManualOptNUBW.cu  ImpalaCorasickCuda(Unroll).cu  ImpalaCorasickCuda.cu  ImpalaKernels.hpp  ImpalaNaiveCuda(Char-based).cu  ImpalaNaiveCuda.cu  ImpalaNaiveOpt(Unroll).cu  ImpalaNaiveOpt.cu
aho-corasick/data/: example_input
aho-corasick/impala/: spec_match.impala
aho-corasick/pattern/: ExamplePatternSpecCorasick.cu  ExamplePatternSpecNaiveOpt.cu  example_pattern
anydsl/: cuda_platform.cpp
convolution/: CMakeLists.txt  main.cpp
convolution/benchmarking/: ConvolutionBenchmarking.ipynb  Untitled.ipynb
convolution/cimg/CImg-2.8.3/: CImg.h
convolution/cpp/: CMakeLists.txt  convolutionSeparable.cu  convolutionSeparable.hpp  convolutionSeparable127.cu  convolutionSeparable127.hpp  convolutionSeparable15.cu  convolutionSeparable15.hpp  convolutionSeparable255.cu  convolutionSeparable255.hpp  convolutionSeparable31.cu  convolutionSeparable31.hpp  convolutionSeparable63.cu  convolutionSeparable63.hpp  convolutionSeparable_gold.cpp  convolutionSeparable_gold.hpp  defines.hpp  main.cpp
convolution/impala/: CMakeLists.txt  convolutionSeparable.impala  mainImpala.cpp  mainImpala.cu
convolution/include/: defines.hpp
haskell/: aho.core  aho.core.data  aho.hs  aho_chscinput.hs  aho_chscout.hs
llvm-spec-examples/: specialized_llvm  specialized_long.llvm  specialized_short.llvm
matching/: CMakeLists.txt  fun.impala  main.cu  multiple_writes.cu  non_jit.impala  test.cu
matching/benchmarking/: MatchingBenchmarking.ipynb
matching/cpp/: CMakeLists.txt  MatchConst.cpp  MatchConstManual.cpp  MatchGlobal.cpp  MatchSingleBench.cpp  MatchSpec.cpp  k.cu  kernels.cu  main.cpp  main.cu  test.cpp  test.impala  utils.cpp
matching/impala/: CMakeLists.txt  fun.impala  main_spec.cpp  main_spec.cu  match_wrappers.cpp  test.cpp  test_simple.cpp
matching/include/: kernels.hpp  match_wrappers.hpp  utils.hpp
micro-bench/: BenchmarkKernels.cu  CMakeLists.txt  kernel.impala  mini-benchmark.cpp  mini_benchmark2.cu
regex/cpp/: CMakeLists.txt  test.cpp
src/: CMakeLists.txt  fo  fun  fun.impala  main.cu  multiple_writes  non_jit.impala  pe_test.c  pe_test.impala  pe_test.ll  test.cu  utils.cpp
test/: Untitled.ipynb  Untitled1.ipynb  check_time_sda2  fun  output.txt  test_results.ipynb
test/data/: pattern.txt
test/docker/: Dockerfile  config.sh  t.py
